--- a/agenda2030.html
+++ b/agenda2030.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ajuntament de Mollet</title>
+    <title>Ajuntament de Mollet - Agenda 2030</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -377,4 +377,5 @@
     </main>
 </body>
 </html>
+
 
