Add environmental measures sections to medidas.html
Added sections for renewable energy, recycling, environmental education, sustainable transport, and emissions control.

--- a/medidas.html
+++ b/medidas.html
@@ -23,5 +23,80 @@
         </nav>
     </header>
 </body>
+<main class="contenedor">
+
+ <!-- ENERGÍAS RENOVABLES -->
+    <a href="renovables.html" class="bloque-link">
+        <section class="medida">
+            <img src="images/panel.jpg" alt="Energías Renovables">
+            <div class="texto">
+                <h2>Energías Renovables</h2>
+                <p>
+                     El Ayuntamiento ha instalado paneles solares en edificios públicos
+                para reducir el consumo energético y el impacto ambiental.
+                </p>
+            </div>
+        </section>
+    </a>
+
+    <!-- RECICLAJE -->
+    <a href="reciclaje.html" class="bloque-link">
+        <section class="medida">
+            <img src="images/reciclaje.jpg" alt="Reciclaje">
+            <div class="texto">
+                <h2>Puntos de Reciclaje</h2>
+                <p>
+                   Mollet dispone de puntos de reciclaje distribuidos por toda la ciudad
+                para facilitar la separación de residuos.
+                </p>
+            </div>
+        </section>
+    </a>
+
+    <!-- EDUCACIÓN -->
+    <a href="educacion.html" class="bloque-link">
+        <section class="medida">
+            <img src="images/educacion.jpg" alt="Educación Medioambiental">
+            <div class="texto">
+                <h2>Educación Medioambiental</h2>
+                <p>
+                    Se realizan talleres y actividades educativas para concienciar a la
+                población sobre la importancia del cuidado del medio ambiente.
+                </p>
+            </div>
+        </section>
+    </a>
+
+    <!-- TRANSPORTE -->
+    <a href="transporte.html" class="bloque-link">
+        <section class="medida">
+            <img src="images/tpublico.jpg" alt="Transporte Sostenible">
+            <div class="texto">
+                <h2>Transporte Sostenible</h2>
+                <p>
+                    Mollet aprueba el nuevo Plan de Movilidad Urbana Sostenible que gira en torno a 3 ejes basados ​​en la movilidad sostenible y el modelo de ciudad
+            </p>
+            </div>
+        </section>
+    </a>
+
+    <!-- EMISIONES -->
+    <a href="emisiones.html" class="bloque-link">
+        <section class="medida">
+            <img src="images/emisiones2.jpg" alt="Control de emisiones">
+            <div class="texto">
+                <h2>Medidas de control de emisiones</h2>
+                <p>
+                    Se aplican regulaciones para reducir las emisiones contaminantes
+                y mejorar la calidad del aire.      
+                </p>
+            </div>
+        </section>
+    </a>
+
+    </main>
+</body>
+</html>    
 
 </html>
+
