--- a/medidas.html
+++ b/medidas.html
@@ -30,7 +30,7 @@
  <!-- ENERGÍAS RENOVABLES -->
     <a href="renovables.html" class="bloque-link">
         <section class="medida">
-            <img src="images/panel.jpg" alt="Energías Renovables">
+            <img src="img/panel.jpg" alt="Energías Renovables">
             <div class="texto">
                 <h2>Energías Renovables</h2>
                 <p>
@@ -44,7 +44,7 @@
     <!-- RECICLAJE -->
     <a href="reciclaje.html" class="bloque-link">
         <section class="medida">
-            <img src="images/reciclaje.jpg" alt="Reciclaje">
+            <img src="img/reciclaje.jpg" alt="Reciclaje">
             <div class="texto">
                 <h2>Puntos de Reciclaje</h2>
                 <p>
@@ -58,7 +58,7 @@
     <!-- EDUCACIÓN -->
     <a href="educacion.html" class="bloque-link">
         <section class="medida">
-            <img src="images/educacion.jpg" alt="Educación Medioambiental">
+            <img src="img/educacion.jpg" alt="Educación Medioambiental">
             <div class="texto">
                 <h2>Educación Medioambiental</h2>
                 <p>
@@ -72,7 +72,7 @@
     <!-- TRANSPORTE -->
     <a href="transporte.html" class="bloque-link">
         <section class="medida">
-            <img src="images/tpublico.jpg" alt="Transporte Sostenible">
+            <img src="img/tpublico.jpg" alt="Transporte Sostenible">
             <div class="texto">
                 <h2>Transporte Sostenible</h2>
                 <p>
@@ -85,7 +85,7 @@
     <!-- EMISIONES -->
     <a href="emisiones.html" class="bloque-link">
         <section class="medida">
-            <img src="images/emisiones2.jpg" alt="Control de emisiones">
+            <img src="img/emisiones2.jpg" alt="Control de emisiones">
             <div class="texto">
                 <h2>Medidas de control de emisiones</h2>
                 <p>
@@ -99,3 +99,4 @@
     </main>
 </body>
 </html>
+
